--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,10 +19,12 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Build with Gradle (using Gradle Action)
+      # Use Gradle Action and tell it which Gradle version to install
+      - name: Build with Gradle (install specific Gradle)
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: assembleDebug
+          gradle-version: "8.6"    # <- installs Gradle 8.6 on the runner
+          arguments: "assembleDebug"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
