--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        // Android Gradle Plugin
-        classpath "com.android.tools.build:gradle:8.1.0"
-        // Kotlin Gradle plugin
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.22"
+        classpath 'com.android.tools.build:gradle:8.1.0'
     }
 }
-
 allprojects {
     repositories {
         google()
