--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,27 +1,22 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+apply plugin: 'com.android.application'
 
 android {
-    compileSdk 34
+    compileSdkVersion 34
     defaultConfig {
-        applicationId "com.example.webviewapp"
-        minSdk 21
-        targetSdk 34
+        applicationId "com.usc.webviewapp"
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
         }
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
-    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
